--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -62,7 +62,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -76,13 +76,13 @@
       </div>
       <div class="col-sm-12 heading">
         <h1>SpinCat</h1>
-        <h3>Downhole Tools for Coil Tubing</h3>
+        <h3>Downhole Tools</h3>
       </div>
     </div>
     
     <div class="row padding-tb-30">
       <div class="container">
-        <p class="width-90 description margin-bottom-30"><span class="bold">The Spincat family of tools provide simple, self-rotating solution for downhole coil tubing units.</span> The viscous fluid governor controls rotation speed tomaximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger, with hard-hitting power. The replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe.</p>
+        <p class="width-90 description margin-bottom-30"><span class="bold">The SpinCat family of tools provide a durable, controlled rotation solution for well intervention operations.</span> A viscous fluid governor controls rotation speed to maximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger to convey hard-hitting power. Replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe. Over thirty years of waterjet engineering back the SpinCat design, setting the standard for rotary nozzle performance and durability.</p>
         <!-- Tool List -->
         <div class="row">
           <div class="col-sm-3 product-list">
@@ -125,15 +125,15 @@
           <div class="row">
             <div class="col-sm-4 padding-30 grey">
               <h2>How it works</h2>
-              <p>The SpinCat™ is a self-rotating swivel designed for coil tubing well service. The powerful rotating jets cover a large area for efficient cleaning. Jet reaction force powers rotation of the head. An internal centrifugal speed control maintains rotation speeds of 150 to 200 rpm. Spincat tools use high viscosity synthetic gear oil for lubrication.</p>
+              <p>The SpinCat is an extremely durable self-rotating nozzle for well service applications. The powerful rotating jet design is engineered to maximize the limited hydraulic horsepower available to the BHA at the end of a long CT or workstring. Jet reaction force powers rotation of the head and an internal centrifugal speed control mechanism maintains rotation speeds.</p>
             </div>
             <div class="col-sm-4 padding-30 grey">
               <h2>Jetting</h2>
-              <p>The standard nozzle head has five ports with 1/8 NPT threads &mdash; one at 15 degrees forward, two at 45 degrees forward, and two at 90 degrees to the axis of rotation. Some of the ports may be plugged in a balanced pattern to concentrate the flow in a particular direction. Alternate head porting patterns may be added to the same head to accommodate different flow rates.</p>
+              <p>The standard nozzle head has five ports with 1/8 NPT threads &mdash; one at 15 degrees forward, two at 45 degrees forward, and two at 90 degrees to the axis of rotation. Some of the ports may be plugged in a balanced pattern to concentrate the flow in a particular direction. Fit-for-purpose head and porting designs are available to accommodate specific flow rates and applications.</p>
             </div>
             <div class="col-sm-4 padding-30 grey">
               <h2>Features</h2>
-              <p>SpinCat tools have a straight flow-through design with a leak-free high pressure seal, so pump power is not wasted. The tools can be used at temperatures up to 200°C, with up to 30% HCL and Nitrogen injection. If used with HCL, it is advisable to flush tool with clean water after use.</p>
+              <p>SpinCat tools have a straight flow-through design with a leak-free high pressure seal, so pump power is not wasted. The tools can be used at temperatures up to 200°C, with up to 30% HCL and Nitrogen injection.</p>
             </div>
           </div>
         </div>
