--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
