--- a/sewer-tools-nozzles/warthog-centralizers.html
+++ b/sewer-tools-nozzles/warthog-centralizers.html
@@ -65,7 +65,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="../sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="../downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="../downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -332,17 +332,13 @@
           <h2>Pipe Cleaning Centralizers</h2>
           <p>A centralizer helps to protect the tool as it passes through the pipe and balances jet standoff distance for more consistent cleaning.</p>
       </div>
-<!--
       <div class="col-md-4 col-md-offset-1">
         <table>
           <tr>
-            <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-            <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
-            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
+            <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
           </tr>
         </table>
       </div>
--->
     </div>
   </section>
   <!-- Product extras -->
