--- a/waterblast-automation/powered-rotation-units.html
+++ b/waterblast-automation/powered-rotation-units.html
@@ -65,7 +65,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="../sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="../downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="../downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -455,14 +455,17 @@
         <h2>Related Items</h2>
     </div>
     <div class="row row-centered">
-        <div class="col-sm-2 col-centered">
-          <a href="self-rotary-heads.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-30-01.jpg" alt="Self-Rotary Heads">
-          <h5>Self-Rotary Heads</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-          <a href="bundle-blaster.html"><img class="img-responsive" src="../assets/img/product/thumb-bundle-blaster-01.jpg" alt="Bundle Blaster">
-          <h5>Bundle Blaster</h5></a>
-        </div>
+      <div class="col-sm-2 col-centered">
+        <a href="../rotary-waterblast-tools/rotary-swivels.html"><img class="img-responsive" src="../assets/img/product/thumb-swivel-01.jpg" alt="SG Swivel Models">
+        <h5>SG Model Swivels</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="self-rotary-heads.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-30-01.jpg" alt="Self-Rotary Heads">
+        <h5>Self-Rotary Heads</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="bundle-blaster.html"><img class="img-responsive" src="../assets/img/product/thumb-bundle-blaster-01.jpg" alt="Bundle Blaster">
+        <h5>Bundle Blaster</h5></a>
       </div>
     </div>
   </section>
