--- a/waterblast-automation/self-rotary-heads.html
+++ b/waterblast-automation/self-rotary-heads.html
@@ -65,7 +65,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="../sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="../downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="../downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -263,8 +263,7 @@
             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
                 <ul>
-                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM Data Sheet</a></li>
-                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/SG-30_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG-30 User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -288,14 +287,17 @@
         <h2>Related Items</h2>
     </div>
     <div class="row row-centered">
-        <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-positioner-01.jpg" alt="Indexing positioner for heat exchanger tube cleaning">
-          <h5>Lightweight Positioner</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-          <h5>Banshee Rotary Tools</h5></a>
-        </div>
+      <div class="col-sm-2 col-centered">
+        <a href="../rotary-waterblast-tools/rotary-swivels.html"><img class="img-responsive" src="../assets/img/product/thumb-swivel-01.jpg" alt="SG Swivel Models">
+        <h5>SG Model Swivels</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotational Heads">
+        <h5>Powered Rotation Units</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="../waterblast-automation/conveyor-cleaner.html"><img class="img-responsive" src="../assets/img/product/thumb-conveyor-02.jpg" alt="Conveyor Cleaner">
+        <h5>Conveyor Cleaner</h5></a>
       </div>
     </div>
   </section>
@@ -312,9 +314,7 @@
       <div class="col-md-4 col-md-offset-1">
         <table>
           <tr>
-            <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-            <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
-<!--            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>-->
+            <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
           </tr>
         </table>
       </div>
