--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -2332,7 +2332,16 @@ Finland</a></li>
           <!-- Downhole Tab Content -->
           <div role="tabpanel" class="tab-pane" id="downhole-tab">
             <div class="row">
-              <p>Select your region below to view a list of <span class="bold">downhole tools dealers</span>.</p>
+              <table class="table table-responsive">
+                  <tr>
+                    <td>For questions related to the SpinCat line of downhole tools, contact <strong>Alan Charles</strong>.<br>
+                      Phone: +1 (720) 219-0777<br>
+                      Email: <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></td>
+                  </tr>
+                <tr>
+                  <td>Select your region below to view a list of <span class="bold">downhole tools dealers</span>.</td>
+                </tr>
+                </table>
               <div class="panel-group" id="accordion3" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default dealer-list">
                   <div class="panel-heading" role="tab" id="dh-us-heading">
