--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -65,7 +65,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="../sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="../downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="../downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -535,6 +535,7 @@
                   <li><a href="../assets/pdf/manuals/bc-h9-c_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Barracuda Models User Manual</a></li>
                   <li><a href="../assets/pdf/manuals/bc-h9-xxlf-c-ti_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Extra Low Flow Barracuda User Manual</a></li>
                   <li><a href="../assets/pdf/manuals/BC_705_Cartridge_Assy.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BC-705 Cartridge Info Sheet</a></li>
+                  <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
