--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -62,7 +62,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -127,6 +127,38 @@
           <tr>
             <td>Hours</td>
             <td>Monday - Friday<br>8:00 AM - 5:00 PM<br>(USA Mountain Time)</td>
+          </tr>
+        </table>
+      </div>
+      <div class="row grey">
+        <h3>Downhole Tools</h3>
+        <table class="table table-responsive">
+          <tr>
+            <td colspan="2">For questions related to the SpinCat line of downhole tools, contact <strong>Alan Charles</strong>.</td>
+          </tr>
+          <tr>
+            <td>Phone</td>
+            <td>+1 (720) 219-0777</td>
+          </tr>
+          <tr>
+            <td>Email</td>
+            <td><a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></td>
+          </tr>
+        </table>
+      </div>
+      <div class="row grey">
+        <h3>Custom Solutions</h3>
+        <table class="table table-responsive">
+          <tr>
+            <td colspan="2">For questions related to custom engineered waterblast equipment, contact <strong>Mike Kreeger</strong>.</td>
+          </tr>
+          <tr>
+            <td>Phone</td>
+            <td>+1 (970) 403-1437</td>
+          </tr>
+          <tr>
+            <td>Email</td>
+            <td><a href="mailto:solutions@stoneagetools.com">solutions@stoneagetools.com</a></td>
           </tr>
         </table>
       </div>
