--- a/sewer-tools-nozzles/hydro-x.html
+++ b/sewer-tools-nozzles/hydro-x.html
@@ -65,7 +65,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="../sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="../downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="../downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -122,7 +122,7 @@
         <div class="clearfix"></div>
         </div>
 
-        <p class="product-description">Hydro Excavation is a safe alternative for providing access to buried utilities by potholing or trenching with hight pressure water. StoneAge now has four options available for different applications.</p>
+        <p class="product-description">Hydro Excavation is a safe alternative for providing access to buried utilities by potholing or trenching with high pressure water. StoneAge now has four options available for different applications.</p>
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
@@ -386,11 +386,7 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
-                  <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hydro-X Data Sheet</a></li>
-<!--
-                  <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WG-1 Parts Breakdown</a></li>
-                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
--->
+                  <li><a href="../assets/pdf/hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hydro-X Data Sheet</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -409,26 +405,6 @@
   <!-- End Product Main -->
 
   <!-- Related Items -->
-  <section class="related container padding-tb-30">
-    <div class="section-heading">
-        <h2>Related Items</h2>
-    </div>
-    <div class="row row-centered">
-        <div class="col-sm-2 col-centered">
-          <a href="../waterblast-automation/autobox-abx-500.html"><img class="img-responsive" src="../assets/img/product/abx-500-03.jpg" alt="AutoBox ABX-500">
-          <h5>AutoBox ABX-500</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
-          <h5>Backout Preventers</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-<!--          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">-->
-          <h5>Stinger</h5></a>
-        </div>
-      </div>
-    </div>
-  </section>
   <!-- End Related Items -->
   
   <!-- Product extras -->
@@ -442,9 +418,8 @@
       <div class="col-md-4 col-md-offset-1">
         <table>
           <tr>
-            <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-<!--            <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>-->
-            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
+            <td><a href="../assets/pdf/hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+            <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
           </tr>
         </table>
       </div>
