--- a/sewer-tools-nozzles/warthog-wd.html
+++ b/sewer-tools-nozzles/warthog-wd.html
@@ -65,7 +65,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="../sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="../downhole-tools.html">Downhole<br/>Wash Tools</a></li>
+            <li><a href="../downhole-tools.html">Downhole<br/>Tools</a></li>
           </ul>
         </div>
       </div>
@@ -117,7 +117,7 @@
         <div class="clearfix"></div>
         </div>
 
-        <p class="product-description">The Warthog WD 1-1/4 is designed to handle the same applications as the WG-1 but at higher flows. The 1-1/4” inlet combined with seven ports effectively distribute more water.</p>
+        <p class="product-description">The Warthog WD 1-1/4 is designed to handle the same applications as the WG-1 but at higher flows. The 1-1/4” inlet combined with seven ports effectively distributes more water.</p>
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
@@ -244,7 +244,7 @@
               <div class="panel-body">
                 <ul>
                   <li><a href="../assets/pdf/manuals/WD_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WD 1-1/4 Tool Manual</a></li>
-                  <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WD 1-1/4 Parts Breakdown</a></li>
+                  <li><a href="../assets/pdf/kits-wd.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WD 1-1/4 Service Kits</a></li>
                   <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -269,18 +269,17 @@
         <h2>Related Items</h2>
     </div>
     <div class="row row-centered">
-        <div class="col-sm-2 col-centered">
-          <a href="../waterblast-automation/autobox-abx-500.html"><img class="img-responsive" src="../assets/img/product/abx-500-03.jpg" alt="AutoBox ABX-500">
-          <h5>AutoBox ABX-500</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
-          <h5>Backout Preventers</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-<!--          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">-->
-          <h5>Stinger</h5></a>
-        </div>
+      <div class="col-sm-2 col-centered">
+        <a href="warthog-wgr-magnum.html"><img class="img-responsive" src="../assets/img/product/thumb-wgr-02.jpg" alt="Warthog WGR Magnum">
+        <h5>WGR Magnum</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="warthog-wg.html"><img class="img-responsive" src="../assets/img/product/thumb-wg-02.jpg" alt="Warthog WG">
+        <h5>WG-1</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="warthog-wgp.html"><img class="img-responsive" src="../assets/img/product/thumb-wgp-02.jpg" alt="Warthog WGP">
+        <h5>WGP Puller</h5></a>
       </div>
     </div>
   </section>
@@ -297,9 +296,7 @@
       <div class="col-md-4 col-md-offset-1">
         <table>
           <tr>
-            <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-<!--            <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>-->
-            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
+            <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
           </tr>
         </table>
       </div>
