--- a/downhole-wash-tools/spincat-sc-212.html
+++ b/downhole-wash-tools/spincat-sc-212.html
@@ -77,7 +77,7 @@
     <div class="container">
       <ul class="breadcrumb">
         <li><a href="../index.html">Home</i></a></li>
-        <li><a href="../downhole-tools.html">Downhole Wash Tools</a></li>
+        <li><a href="../downhole-tools.html">Downhole Tools</a></li>
         <li class="active">SpinCat SC-212</li>
       </ul> 
     </div>
@@ -315,7 +315,7 @@
   <!-- Footer CTA -->
   <div class="row footer-cta">
     <div class="container">
-      <a href="contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
+      <a href="../contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
     </div>
   </div>
   
@@ -371,7 +371,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2016 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
