--- a/waterblast-automation/sabertooth-flex-lancing.html
+++ b/waterblast-automation/sabertooth-flex-lancing.html
@@ -354,7 +354,7 @@ The StoneAge Sabertooth SRT-100 is an automated flex lancing system specifically
   <!-- Footer CTA -->
   <div class="row footer-cta">
     <div class="container">
-      <a href="contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
+      <a href="../contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
     </div>
   </div>
   
@@ -410,7 +410,7 @@ The StoneAge Sabertooth SRT-100 is an automated flex lancing system specifically
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2016 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
