--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -470,7 +470,7 @@
   <!-- Footer CTA -->
   <div class="row footer-cta">
     <div class="container">
-      <a href="contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
+      <a href="../contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
     </div>
   </div>
   
@@ -526,7 +526,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2016 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
