--- a/sewer-tools-nozzles/warthog-wg.html
+++ b/sewer-tools-nozzles/warthog-wg.html
@@ -402,7 +402,7 @@ Hardened stainless steel orifices resist cracking and scratching</li>
   <!-- Footer CTA -->
   <div class="row footer-cta">
     <div class="container">
-      <a href="contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
+      <a href="../contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
     </div>
   </div>
   
@@ -458,7 +458,7 @@ Hardened stainless steel orifices resist cracking and scratching</li>
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2016 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
