--- a/waterblast-automation/sm-air-large-tank-cleaner.html
+++ b/waterblast-automation/sm-air-large-tank-cleaner.html
@@ -298,7 +298,7 @@ used with a variety of head designs for many different applications</li>
   <!-- Footer CTA -->
   <div class="row footer-cta">
     <div class="container">
-      <a href="contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
+      <a href="../contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
     </div>
   </div>
   
@@ -354,7 +354,7 @@ used with a variety of head designs for many different applications</li>
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2016 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
