floor cleaner plus

--- a/careers.html
+++ b/careers.html
@@ -102,6 +102,10 @@
         <div class="col-sm-6">
           <ul class="list-unstyled job-listings">
             <li>
+              <a href="assets/pdf/jobs/Director-Finanace_IT_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Buyer – R&amp;D and Special Projects Support</h4></a>
+                <p>The Buyer-R&amp;D and Special Projects Support is responsible for the purchasing, scheduling, and expediting of purchased parts for R&amp;D, special orders for the Sales department, and custom projects.</p>
+            </li>
+            <li>
               <a href="assets/pdf/jobs/Director-Finanace_IT_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Director of Finance and Information Systems</h4></a>
                 <p>The Director of Finance and Information Systems oversees StoneAge’s accounting, financial, and IT/IS functions.</p>
             </li>
