--- a/contact.html
+++ b/contact.html
@@ -105,16 +105,16 @@
                 <address>
                   466 South Skylane Drive <br>
                   Durango, CO 81303 <br><br>
-                  +1 970 259 2869 <br>
+                  +1 (970) 259-2869 <br>
                   <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
                 </address>
                 <p class="small">Monday to Friday 8:00am&ndash;5:00pm MST</p>
                 <hr>
                 <h3>Houston Area Office</h3>
                 <address>
-                  466 South Skylane Drive <br>
-                  Durango, CO 81303 <br><br>
-                  +1 970 259 2869 <br>
+                  2150 Pansy St.<br>
+                  Pasadena, TX 77503 <br><br>
+                  +1 (281) 888-5069 <br>
                   <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
                 </address>
                 <p class="small">Monday to Friday 8:00am&ndash;5:00pm MST</p>
