--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -80,11 +80,11 @@
     <div class="col-sm-6 padding-right-60">
       <div class="row margin-bottom-30">
         <div class="col-sm-4">
-          <img src="assets/img/warthog_catalog_cover_2014.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog">
+          <a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog.pdf" target="_blank" title="2016 StoneAge Waterblast Tools Catalog"><img src="assets/img/catalog_cover_wb_2016.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog"></a>
         </div>
         <div class="col-sm-8">
           <h3>2016 Waterblast Tools</h3>
-          <p><a href="#" target="_blank" title="2016 StoneAge Waterblast Tools Catalog">Click here to download the complete Waterblast Tools Catalog</a> » PDF 1.9 MB</p>
+          <p><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog.pdf" target="_blank" title="2016 StoneAge Waterblast Tools Catalog">Click here to download the complete Waterblast Tools Catalog</a> » PDF 9 MB</p>
         </div>
       </div>
       
@@ -93,115 +93,215 @@
         <table class="table table-condensed catalog-pages">
           <tr>
             <td>Page 1:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page1.pdf" target="_blank">Front Cover</a></td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_1.pdf" target="_blank">Front Cover</a></td>
           </tr>
           <tr>
-            <td>Page 2:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page2.pdf" target="_blank">Catalog Contents</a></td>
+            <td>Page 2-3:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_2-3.pdf" target="_blank">Catalog Contents, Message from CEO</a></td>
           </tr>
           <tr>
-            <td>Page 3:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page3.pdf" target="_blank">Catalog Contents</a></td>
+            <td>Page 4-5:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_4-5.pdf" target="_blank">AutoBox ABX-2L</a></td>
           </tr>
           <tr>
-            <td>Page 4:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page4.pdf" target="_blank">WV-1/4 (2&#8243;-4&#8243; Lines)</a></td>
+            <td>Page 6-7:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_6-7.pdf" target="_blank">AutoBox ABX-2L Options</a></td>
           </tr>
           <tr>
-            <td>Page 5:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page5.pdf" target="_blank">WV-1/4 (continued)</a></td>
+            <td>Page 8-9:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_8-9.pdf" target="_blank">Bundle Blaster</a></td>
           </tr>
           <tr>
-            <td>Page 6:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page6.pdf" target="_blank">WT-3/8-C (3&#8243;-6&#8243; Lines)</a></td>
+            <td>Page 10-11:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_10-11.pdf" target="_blank">Rigid Lance Machine</a></td>
           </tr>
           <tr>
-            <td>Page 7:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page7.pdf" target="_blank">WT-3/8-C (continued)</a></td>
+            <td>Page 12-13:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_12-13.pdf" target="_blank">Striker</a></td>
           </tr>
           <tr>
-            <td>Page 8:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page8.pdf" target="_blank">WS-1/2 (4&#8243;-8&#8243; Lines)</a></td>
+            <td>Page 14-15:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_14-15.pdf" target="_blank">Floor Cleaners</a></td>
           </tr>
           <tr>
-            <td>Page 9:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page9.pdf" target="_blank">WS-1/2 (continued)</a></td>
+            <td>Page 16-17:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_16-17.pdf" target="_blank">Surface Cleaning Accessories</a></td>
           </tr>
           <tr>
-            <td>Page 10:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page10.pdf" target="_blank">WH-1/2 &amp; WH-3/4 (6&#8243;-18&#8243; Lines)</a></td>
+            <td>Page 18-19:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_18-19.pdf" target="_blank">AutoBox ABX-500</a></td>
           </tr>
           <tr>
-            <td>Page 11:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page11.pdf" target="_blank">WH-1/2 &amp; WH-3/4 (continued)</a></td>
+            <td>Page 20-21:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_20-21.pdf" target="_blank">Navigator</a></td>
           </tr>
           <tr>
-            <td>Page 12:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page12.pdf" target="_blank">WHP-3/4 Classic (6&#8243;-18&#8243; Lines with Elbows)</a></td>
+            <td>Page 22-23:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_22-23.pdf" target="_blank">ProDrive</a></td>
           </tr>
           <tr>
-            <td>Page 13:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page13.pdf" target="_blank">WHP-3/4 Classic (continued)</a></td>
+            <td>Page 24-25:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_24-25.pdf" target="_blank">Inside Diameter Pipe Cleaner</a></td>
           </tr>
           <tr>
-            <td>Page 14:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page14.pdf" target="_blank">WGR Magnum</a></td>
+            <td>Page 26-27:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_26-27.pdf" target="_blank">Outside Diameter Pipe Cleaner</a></td>
           </tr>
           <tr>
-          <td>Page 15:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page15.pdf" target="_blank">WGR Magnum (continued)</td>
+          <td>Page 28-29:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_28-29.pdf" target="_blank">Torus TR-130</td>
           </tr>
           <tr>
-            <td>Page 16:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page16.pdf" target="_blank">WG-1 Classic (8&#8243;-36&#8243; Lines)</a></td>
+            <td>Page 30-31:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_30-31.pdf" target="_blank">Torus TR-200</a></td>
           </tr>
           <tr>
-            <td>Page 17:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page17.pdf" target="_blank">WG-1 Classic (continued)</a></td>
+            <td>Page 32-33:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_32-33.pdf" target="_blank">Torus Positioning Booms</a></td>
           </tr>
           <tr>
-          <td>Page 18:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page18.pdf" target="_blank">WGP-1 Classic (8&#8243;-36&#8243; lines)</a></td>
+          <td>Page 34-35:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_34-35.pdf" target="_blank">SM-Air Large Tank Cleaner</a></td>
           </tr>
           <tr>
-          <td>Page 19:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page19.pdf" target="_blank">WGP-1 Classic (continued)</a></td>
+          <td>Page 36-37:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_36-37.pdf" target="_blank">Boiler Tube Cleaner</a></td>
           </tr>
           <tr>
-          <td>Page 20:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page20.pdf" target="_blank">WD 1-1/4 Classic High Flow</a></td>
+          <td>Page 38-39:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_38-39.pdf" target="_blank">Yellow Jacket</a></td>
           </tr>
           <tr>
-          <td>Page 21:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page21.pdf" target="_blank">WD 1-1/4 Classic (continued)</a></td>
+          <td>Page 40-41:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_40-41.pdf" target="_blank">Cable Swivel Tool</a></td>
           </tr>
           <tr>
-          <td>Page 22:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page22.pdf" target="_blank">Hydro-X</a></td>
+          <td>Page 42-43:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_42-43.pdf" target="_blank">BFW-100 Boiler Cleaning</a></td>
           </tr>
           <tr>
-          <td>Page 23:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page23.pdf" target="_blank">Centralizers &amp; Manhole Cleaners</a></td>
+          <td>Page 44-45:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_44-45.pdf" target="_blank">Blackhawk Concrete Hydrodemolition</a></td>
           </tr>
           <tr>
-          <td>Page 24:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page24.pdf" target="_blank">Terms and Conditions of Sale</a></td>
+          <td>Page 46-47:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_46-47.pdf" target="_blank">StoneAge Solutions - Custom Engineered</a></td>
           </tr>
           <tr>
-            <td>Page 25:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page25.pdf" target="_blank">Terms and Conditions of Sale (continued)</a></td>
+            <td>Page 48-49:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_48-49.pdf" target="_blank">Barracuda</a></td>
           </tr>
           <tr>
-            <td>Page 26:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page26.pdf" target="_blank">Customer Service</a></td>
+            <td>Page 50-51:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_50-51.pdf" target="_blank">Spitfire</a></td>
           </tr>
           <tr>
-            <td>Page 27:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page27.pdf" target="_blank">The StoneAge Team</a></td>
+            <td>Page 52-53:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_52-53.pdf" target="_blank">Hydro-X</a></td>
           </tr>
           <tr>
-            <td>Page 28:</td>
-            <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page28.pdf" target="_blank">Back Cover</a></td>
+            <td>Page 54-55:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_54-55.pdf" target="_blank">Banshee/Beetle</a></td>
+          </tr>
+          <tr>
+            <td>Page 56-57:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_56-57.pdf" target="_blank">Banshee/Beetle Head Selection</a></td>
+          </tr>
+          <tr>
+            <td>Page 58-59:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_58-59.pdf" target="_blank">2" Badger</a></td>
+          </tr>
+          <tr>
+            <td>Page 60-61:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_60-61.pdf" target="_blank">4" Badger</a></td>
+          </tr>
+          <tr>
+            <td>Page 62-63:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_62-63.pdf" target="_blank">6" Badger</a></td>
+          </tr>
+          <tr>
+            <td>Page 64-65:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_64-65.pdf" target="_blank">BJV</a></td>
+          </tr>
+          <tr>
+            <td>Page 66-67:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_66-67.pdf" target="_blank">BJV Centralizers</a></td>
+          </tr>
+          <tr>
+            <td>Page 68-69:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_68-69.pdf" target="_blank">Raptor</a></td>
+          </tr>
+          <tr>
+            <td>Page 70-71:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_70-71.pdf" target="_blank">Gopher</a></td>
+          </tr>
+          <tr>
+            <td>Page 72-73:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_72-73.pdf" target="_blank">Rotary Swivels</a></td>
+          </tr>
+          <tr>
+            <td>Page 74-75:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_74-75.pdf" target="_blank">Rotary Swivels</a></td>
+          </tr>
+          <tr>
+            <td>Page 76-77:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_76-77.pdf" target="_blank">Waterblast Accessories - Backout Preventions</a></td>
+          </tr>
+          <tr>
+            <td>Page 78-79:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_78-79.pdf" target="_blank">Waterblast Accessories - Nozzles</a></td>
+          </tr>
+          <tr>
+            <td>Page 80-81:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_80-81.pdf" target="_blank">Waterblast Accessories - Nozzles</a></td>
+          </tr>
+          <tr>
+            <td>Page 82-83:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_82-83.pdf" target="_blank">Hose Fittings and Adapters</a></td>
+          </tr>
+          <tr>
+            <td>Page 84-85:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_84-85.pdf" target="_blank">Hose Fittings and Adapters</a></td>
+          </tr>
+          <tr>
+            <td>Page 86-87:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_86-87.pdf" target="_blank">Hose Fittings and Adapters</a></td>
+          </tr>
+          <tr>
+            <td>Page 88-89:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_88-89.pdf" target="_blank">Standard Conversions &amp; Equations</a></td>
+          </tr>
+          <tr>
+            <td>Page 90-91:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_90-91.pdf" target="_blank">Fitting Assembly Guidelines</a></td>
+          </tr>
+          <tr>
+            <td>Page 92-93:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_92-93.pdf" target="_blank">Fitting Assembly Guidelines, Thread Coding</a></td>
+          </tr>
+          <tr>
+            <td>Page 94-95:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_94-95.pdf" target="_blank">Thread Coding, Service &amp; Supplies</a></td>
+          </tr>
+          <tr>
+            <td>Page 96-97:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_96-97.pdf" target="_blank">Swivel Basics, Safey Info</a></td>
+          </tr>
+          <tr>
+            <td>Page 98-99:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_98-99.pdf" target="_blank">Maintenance Kits</a></td>
+          </tr>
+          <tr>
+            <td>Page 100-101:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_100-101.pdf" target="_blank">StoneAge Staff</a></td>
+          </tr>
+          <tr>
+            <td>Page 102-103:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_102-103.pdf" target="_blank">Customer Service, Terms &amp; Coonditions</a></td>
+          </tr>
+          <tr>
+            <td>Page 104:</td>
+            <td><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog_104.pdf" target="_blank">Back Cover</a></td>
           </tr>
         </table>
       </div>
@@ -211,11 +311,11 @@
     <div class="col-sm-6 padding-left-60">
       <div class="row margin-bottom-30">
         <div class="col-sm-4">
-          <img src="assets/img/warthog_catalog_cover_2014.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog">
+          <a href="assets/pdf/sewer_2014/2014_warthog_catalog_web.pdf" target="_blank" title="2014/2015 Warthog Sewer Catalog"><img src="assets/img/warthog_catalog_cover_2014.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog"></a>
         </div>
         <div class="col-sm-8">
           <h3>2014/15 Sewer Nozzles</h3>
-          <p><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web.pdf" target="_blank" title="2014/2015 Warthog Sewer Catalog">Click here to download the complete 2014/15 Sewer Nozzles Catalog</a> » PDF 1.9 MB</p>
+          <p><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web.pdf" target="_blank" title="2014/2015 Warthog Sewer Catalog">Click here to download the complete 2014/15 Sewer Nozzles Catalog</a> » PDF 2 MB</p>
         </div>
       </div>
       
