--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -363,9 +363,9 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
-                  <li><a href="../assets/pdf/bpt-100_info_sheet.pdf"><i class="fa fa-file-text-o"></i> &nbsp;BPT-100 Info Sheet</a></li>
-                  <li><a href="../assets/pdf/manuals/BPT-100_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;BPT-100 User Manual</a></li>
-                  <li><a href="../assets/pdf/manuals/ve_400_manual_with_stop.pdf"><i class="fa fa-file-text-o"></i> &nbsp;VE-400 User Manual</a><br><p class="small">Courtesy of Advanced Pressure Systems</p></li>
+                  <li><a href="../assets/pdf/bpt-100_info_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BPT-100 Info Sheet</a></li>
+                  <li><a href="../assets/pdf/manuals/BPT-100_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BPT-100 User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/ve_400_manual_with_stop.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;VE-400 User Manual</a><br><p class="small">Courtesy of Advanced Pressure Systems</p></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
