--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -68,14 +68,11 @@
       </div>
     </div>
   </nav>
-
-  <!-- Big WB nav -->
-  <!-- End Big WB nav -->
   
   <section class="spincat">
     <div class="row bg-lt-grey margin-bottom-30 header">
       <div class="col-sm-12 heading-img">
-        <img src="assets/img/sewer-family.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
+        <img src="assets/img/sewer-family-2016.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
       </div>
       <div class="col-sm-12 heading">
         <h1>Sewer Nozzles</h1>
